--- a/contracts_for_concurrency-20-bibliography.bib
+++ b/contracts_for_concurrency-20-bibliography.bib
@@ -42,6 +42,29 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@inproceedings{RoadRunner,
+    author = {Flanagan, Cormac and Freund, Stephen},
+    year = {2010},
+    month = {01},
+    %pages = {1-8},
+    title = {The RoadRunner dynamic analysis framework for concurrent programs},
+    journal = {ACM SIGPLAN/SIGSOFT Workshop on Program Analysis for Software
+        Tools and Engineering},
+    doi = {10.1145/1806672.1806674}
+}
+
+@book{javaTheCompleteReference,
+    author = {Herbert Schildt},
+    title = {Java: The Complete Reference, Eleventh Edition},
+    publisher = {McGraw-Hill Education},
+    year = {2018},
+    doi = {10.1036/9781260440249},
+    address = {New York},
+    edition   = {11},
+    ISBN   = {1260440230},
+    %pages   = {-1}
+}
+
 %    @BOOK{Pravidla,
 %      author =       "Zdeněk Hlavsa and others",
 %      title =        "Pravidla českého pravopisu",
