--- a/contracts_for_concurrency-20-bibliography.bib
+++ b/contracts_for_concurrency-20-bibliography.bib
@@ -65,6 +65,15 @@
     %pages   = {-1}
 }
 
+@MISC{asmguide,
+    author = {Eric Bruneton},
+    title = {ASM 4.0 A Java bytecode engineering library},
+    year = {2011},
+    url = {https://asm.ow2.io/asm4-guide.pdf},
+    howpublished = "online",
+    cited = {2021-01-09},
+}
+
 %    @BOOK{Pravidla,
 %      author =       "Zdeněk Hlavsa and others",
 %      title =        "Pravidla českého pravopisu",
